[06/03/2025] Add JWT, add UI

--- a/SaleApp/src/main/resources/templates/layout/layout.html
+++ b/SaleApp/src/main/resources/templates/layout/layout.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title th:insert="${pageTitle}">Admin Dashboard</title>
+<!--    <title th:insert="${pageTitle}">Admin Dashboard</title>-->
+    <title>layout</title>
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
 </head>
 <body>
